Fixed squirrel command

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 #################
+## Spy for Solid Edge
+#################
+Releases/
+*.nupkg
+
+#################
 ## Eclipse
 #################
 
