--- a/src/SolidEdgeSpy/App.config
+++ b/src/SolidEdgeSpy/App.config
@@ -1,23 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="SolidEdgeSpy.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-    </sectionGroup>
-  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
-  <userSettings>
-    <SolidEdgeSpy.Properties.Settings>
-      <setting name="MainFormRect" serializeAs="String">
-        <value>0, 0, 800, 600</value>
-      </setting>
-      <setting name="MainFormWindowState" serializeAs="String">
-        <value>Normal</value>
-      </setting>
-    </SolidEdgeSpy.Properties.Settings>
-  </userSettings>
+  <appSettings>
+    <add key="UpdateUrl" value="https://solidedgespy.blob.core.windows.net/install"/>
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
